updated doc, added logout
